2022-10-29T16:31:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3352152012 # 565
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 376 589 / 392 620
* notice: next accum: outdated-unq outdated-all / unq all: 377 590 / 393 621
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-15] / [2022-10-29]

2022-10-29T02:05:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3349664131 # 563
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 375 586 / 392 617
* notice: next accum: outdated-unq outdated-all / unq all: 376 589 / 392 620
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-10-14] / [2022-10-28]

2022-10-28T16:31:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3346993315 # 562
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 375 586 / 392 618
* notice: next accum: outdated-unq outdated-all / unq all: 375 586 / 392 617
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
* notice: removed / changed dates: [] / [2022-10-14]

2022-10-28T08:36:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3344015006 # 561
* notice: last 14d: unq all: 3 32
* notice: prev accum: outdated-unq outdated-all / unq all: 375 586 / 391 618
* notice: next accum: outdated-unq outdated-all / unq all: 375 586 / 392 618
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-14 2022-10-28]

2022-10-27T16:35:46Z: