@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-29T16:31:34Z",
+  "timestamp" : "2022-10-30T08:28:09Z",
   "count_outdated" : 590,
   "uniques_outdated" : 377,
   "count" : 621,
-  "uniques" : 393,
+  "uniques" : 394,
   "clones" : [
     {
       "timestamp": "2022-10-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-10-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
